# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  pytest.ini  tasks.py
dokumentaatio/: Työaikakirjanpito.md  changelog.md  muutoslogi.md  tuntikirjanpito.md  vaatimusmaarittely.md  vaatimusmäärittely
laskarit/: .gitignore  viikko1.md
laskarit/poetry-testi/: pyproject.toml
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: .gitignore  pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: config.py  index.py  initialize_database.py  main.py  tasks.py
src/data/: create_test_db_data.py  database_connection.py  initialize_database.py
src/entities/: group.py  item.py  storage.py  user.py
src/reposetory/: calendar_reposetory.py  group_reposetory.py  user_reposetory.py
src/repositories/: storage_repository.py
src/services/: calendar_service.py  group_service.py  user_service.py
src/tests/: storage_repository_test.py  user_reposetory_test.py  user_service_test.py
src/ui/: group_admin.py  konsoli_io.py  login_register.py  ui.py  user_dashboard.py
