[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["Joosef Abokther <49030615+Jouchef@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
